--- a/Resúmenes_con_pandas.ipynb
+++ b/Resúmenes_con_pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgxHELdaRG++0lP9AAQrMq",
+      "authorship_tag": "ABX9TyM+N/gX4g7w+iPGMHNzDAmy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "lkCknBWosv7K"
+        "id": "lkCknBWosv7K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1deac51f-04cd-4efc-fdd2-e5cc828ee31f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -56,7 +68,7 @@
       "metadata": {
         "id": "RIqM_3gzs_v3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,9 +93,9 @@
           "height": 35
         },
         "id": "Wu1Qk-g4tbdx",
-        "outputId": "309bb9f1-c336-46b7-9bf1-410dbc486690"
+        "outputId": "4f7e6407-f33e-4553-86e3-d1130ab08701"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +108,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 4
         }
       ]
     },
@@ -122,9 +134,9 @@
           "height": 278
         },
         "id": "fTLFZDhvuE_d",
-        "outputId": "f6dfc94e-6ad5-4393-fe58-cb70404a2bf2"
+        "outputId": "d1b8cdef-d0b2-4da1-a1d7-3c4a8060c784"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +158,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6b436c2a-14b0-43e1-babe-f1e413a9da72\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d81d5690-3b2b-4f3b-b166-de7eae03cd84\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -261,7 +273,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b436c2a-14b0-43e1-babe-f1e413a9da72')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d81d5690-3b2b-4f3b-b166-de7eae03cd84')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -313,12 +325,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6b436c2a-14b0-43e1-babe-f1e413a9da72 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d81d5690-3b2b-4f3b-b166-de7eae03cd84 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6b436c2a-14b0-43e1-babe-f1e413a9da72');\n",
+              "        const element = document.querySelector('#df-d81d5690-3b2b-4f3b-b166-de7eae03cd84');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -338,8 +350,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3cfc653a-42bc-461a-a216-e4cc0a0af418\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3cfc653a-42bc-461a-a216-e4cc0a0af418')\"\n",
+              "<div id=\"df-66aa2dce-0f0e-405d-857a-d3d3fd1d260b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-66aa2dce-0f0e-405d-857a-d3d3fd1d260b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -458,7 +470,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3cfc653a-42bc-461a-a216-e4cc0a0af418 button');\n",
+              "        document.querySelector('#df-66aa2dce-0f0e-405d-857a-d3d3fd1d260b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -469,7 +481,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 5
         }
       ]
     },
@@ -513,9 +525,9 @@
           "height": 278
         },
         "id": "fN3pd86h0QrY",
-        "outputId": "d987171b-cda8-466c-ffed-5ae0707b7a02"
+        "outputId": "30413b55-98a3-464c-b982-63146526aed1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +549,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0eb330b2-6c91-4923-be43-009e466b16d0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b59a428e-0ca9-467e-9c8b-2bbf8d0cf5d9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -658,7 +670,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0eb330b2-6c91-4923-be43-009e466b16d0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b59a428e-0ca9-467e-9c8b-2bbf8d0cf5d9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -710,12 +722,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0eb330b2-6c91-4923-be43-009e466b16d0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b59a428e-0ca9-467e-9c8b-2bbf8d0cf5d9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0eb330b2-6c91-4923-be43-009e466b16d0');\n",
+              "        const element = document.querySelector('#df-b59a428e-0ca9-467e-9c8b-2bbf8d0cf5d9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -735,8 +747,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-57af73a7-460c-4f43-aacd-5168ec7f8c9b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-57af73a7-460c-4f43-aacd-5168ec7f8c9b')\"\n",
+              "<div id=\"df-cd248946-8989-4ed0-bc20-ee5326a85b8a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cd248946-8989-4ed0-bc20-ee5326a85b8a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -855,7 +867,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-57af73a7-460c-4f43-aacd-5168ec7f8c9b button');\n",
+              "        document.querySelector('#df-cd248946-8989-4ed0-bc20-ee5326a85b8a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -866,7 +878,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 6
         }
       ]
     },
@@ -916,9 +928,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CEtA7hY46lrs",
-        "outputId": "574e5d65-21f2-40e0-c9a1-2f53acb8015c"
+        "outputId": "3161cc60-9f09-4580-bf1f-c420b3123b4b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -948,9 +960,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jf-anoAw7af4",
-        "outputId": "c4fd9346-7798-492d-c9dd-4dd2fb552bb5"
+        "outputId": "ae0a3dca-65a1-4a66-abd9-f8e13d865b94"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -989,9 +1001,9 @@
           "height": 175
         },
         "id": "IhpbQidH8YxW",
-        "outputId": "f8ea5b1e-dacc-431f-8bfc-804c6d7dd212"
+        "outputId": "ecbf40be-0cdb-4bc9-f654-129fd83358b5"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1005,7 +1017,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a4a2492b-546c-48eb-afbf-c9f98750a236\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b3ab01e8-a8f0-44f5-93c3-7adf58721667\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1055,7 +1067,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a4a2492b-546c-48eb-afbf-c9f98750a236')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b3ab01e8-a8f0-44f5-93c3-7adf58721667')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1107,12 +1119,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a4a2492b-546c-48eb-afbf-c9f98750a236 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b3ab01e8-a8f0-44f5-93c3-7adf58721667 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a4a2492b-546c-48eb-afbf-c9f98750a236');\n",
+              "        const element = document.querySelector('#df-b3ab01e8-a8f0-44f5-93c3-7adf58721667');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1132,8 +1144,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-435f50d2-72ba-42b5-869c-995da5523de1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-435f50d2-72ba-42b5-869c-995da5523de1')\"\n",
+              "<div id=\"df-5c088770-35f5-4a95-b408-251388493f3a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5c088770-35f5-4a95-b408-251388493f3a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1252,7 +1264,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-435f50d2-72ba-42b5-869c-995da5523de1 button');\n",
+              "        document.querySelector('#df-5c088770-35f5-4a95-b408-251388493f3a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1263,7 +1275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 9
         }
       ]
     },
@@ -1296,9 +1308,9 @@
           "height": 206
         },
         "id": "kqIxuwHR9hsM",
-        "outputId": "ba564dd1-3b0d-437f-e356-3f2f785eb1d3"
+        "outputId": "737e1702-d2d0-4615-fd6e-e50f5c9543c8"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1325,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-26face75-8de0-4324-916d-65f3e612b02d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-097e94ab-818e-47c8-9b07-c5ca6ca78c89\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1362,7 +1374,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-26face75-8de0-4324-916d-65f3e612b02d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-097e94ab-818e-47c8-9b07-c5ca6ca78c89')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1414,12 +1426,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-26face75-8de0-4324-916d-65f3e612b02d button.colab-df-convert');\n",
+              "        document.querySelector('#df-097e94ab-818e-47c8-9b07-c5ca6ca78c89 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-26face75-8de0-4324-916d-65f3e612b02d');\n",
+              "        const element = document.querySelector('#df-097e94ab-818e-47c8-9b07-c5ca6ca78c89');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1439,8 +1451,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fffc7192-0f24-4bee-ad7a-7eea7ce628ed\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fffc7192-0f24-4bee-ad7a-7eea7ce628ed')\"\n",
+              "<div id=\"df-f7efa0bc-c645-4a9d-bdd2-5d0a766aba7e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f7efa0bc-c645-4a9d-bdd2-5d0a766aba7e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1559,7 +1571,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fffc7192-0f24-4bee-ad7a-7eea7ce628ed button');\n",
+              "        document.querySelector('#df-f7efa0bc-c645-4a9d-bdd2-5d0a766aba7e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1570,7 +1582,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 10
         }
       ]
     },
@@ -1593,9 +1605,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cNoGYkv9-E_2",
-        "outputId": "b4b42992-e858-457c-a90f-e4e8944dc376"
+        "outputId": "ba72b838-4652-4481-ecc6-9f6fc43ee2f7"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1609,7 +1621,44 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "personajes['mass']+personajes['height']"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_vTnzi9PECWf",
+        "outputId": "3b7ed9fa-f4a6-4335-bca6-509694075656"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0     249.0\n",
+              "1     242.0\n",
+              "2     128.0\n",
+              "3     338.0\n",
+              "4     199.0\n",
+              "      ...  \n",
+              "82      NaN\n",
+              "83      NaN\n",
+              "84      NaN\n",
+              "85      NaN\n",
+              "86    210.0\n",
+              "Length: 87, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
