--- a/DS_C2_SC2_EDERSALAZAR.ipynb
+++ b/DS_C2_SC2_EDERSALAZAR.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOzo8YmI+E1F0gbrJ5iIgiy",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Edersao/Curso_Data_Scientist/blob/main/DS_C2_SC2_EDERSALAZAR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -1863,7 +1851,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "j. Generar un dataframe deniminado **antres20**  con todos los registros qe se hayan realizado antes del 20 de diciembre de 2020"
+        "j. Generar un dataframe deniminado **antes20**  con todos los registros qe se hayan realizado antes del 20 de diciembre de 2020"
       ],
       "metadata": {
         "id": "H2otXn5xGyFX"
@@ -2316,7 +2304,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pfizer = vacunas[vacunas['vaccines'].str.contains('Pfizer',case=False) == True].head()"
+        "pfizer = vacunas[vacunas['vaccines'].str.contains('Pfizer',case=False) == True]"
       ],
       "metadata": {
         "id": "juMb8C8PHL1O"
@@ -2345,7 +2333,7 @@
       "metadata": {
         "id": "Dw3_243PHd9b"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": []
     }
   ]
